fix(style): catalog size tags overflow

--- a/src/components/status-tag/copy.less
+++ b/src/components/status-tag/copy.less
@@ -11,13 +11,13 @@
   :global {
     .copy-button-wrapper {
       display: none;
-      background-color: #383838;
+      background-color: rgba(255, 255, 255, 20%);
       position: absolute;
       z-index: 10;
-      right: -28px;
+      right: 0;
       top: 0;
       padding: 2px;
-      border-radius: 4px;
+      border-radius: 0 4px;
     }
 
     .simplebar-content {
