--- a/src/components/tags-wrapper/index.less
+++ b/src/components/tags-wrapper/index.less
@@ -13,4 +13,8 @@
     height: 22px;
     opacity: 0.7;
   }
+
+  .tags-content {
+    display: flex;
+  }
 }
